--- a/Ascron/Ascron.csproj
+++ b/Ascron/Ascron.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
     <PackageReference Include="Microsoft.Office.Interop.Outlook" Version="15.0.4797.1004" />
     <PackageReference Include="Microsoft.Office.Interop.Word" Version="15.0.4797.1004" />
+    <PackageReference Include="pythonnet" Version="3.0.3" />
+    <PackageReference Include="QuantConnect.pythonnet" Version="2.0.38" />
   </ItemGroup>
 
   <ItemGroup>
